style.css
html, body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    width: 100%;
    height: calc(100% - 160px);
}

html {
    overflow: hidden;
}

a {
    text-decoration: none;
}

header {
    height: 80px;
    background-color: #0000ff;
}

body {
    overflow: auto;
    background-color: #ddd;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
}

p {
    text-align: center;
    margin: 0;
}

ul {
    margin: 0;
    padding: 0;
}

#toplogo {
    height: 54px;
    margin: 10px 10px 10px 10px;
}

#topmenu {
    position: absolute;
    top: 0;
    right: 10%;
    width: 70%;
    margin: auto;
}

#topmenu ul {
    float: right;
    vertical-align: center;
}

#topmenu ul li {
    position: relative;
    display: inline;
    vertical-align: middle;
    margin: auto 10px;
    color: #fff;
}

#topmenu a {
    color: #fff;
}

.center {
    display: block;
    margin: 0 auto;
    width: 100%;
    text-align: center;
}

.title {
    width: 100%;
    text-align: center;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    color: #0000ff;
}

img {
    border: 3px solid #00f;
}

article {
    position: static;
    left: 10%;
    width: 80%;
    height: 106px;
    margin: 25px auto;
    box-shadow: 0px 0px 5px #000;
}

article * {
    display: inline;
}

article p {
    display: inline;
    margin: 10px;
}

.leftbox>* {
    float: left;
    text-align: left;
}

.rightbox>* {
    float: right;
    text-align: right;
}

#timebox {
    position: absolute;
    bottom: 100px;
    width: 100%;
    text-align: center;
    font-size: 36pt;
}

#updatetime {
    text-decoration: none;
    background-color: #00f;
    border: none;
    color: #fff;
    padding: 10px 20px;
    text-align: center;
    display: inline-block;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 12pt;
    cursor: pointer;
    z-index: 11;
}

.ul-vertical {
    float: left;
    margin:  20%;
}

.ul-vertical li {
    display: block;
    width: 100%;
    text-align: center;
}

nav {
    position: relative;
    width: 100%;
}

main {
    height: 100%;
}

footer {
    position: absolute;
    bottom: 0px;
    height: 80px;
    width: 100%;
    text-align: center;
    background-color: #0066FF;
}

#invisbutton {
    position: fixed;
    top: 0;
    height: 100%;
    width: 100%;
    z-index: 1;
    border: 0;
    padding: 0;
    background-color: transparent;
}

